# trayd

./: .typos.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  deny.yml  deploy.yml  doc.yml  fmt-clippy.yml  test.yml  typos.yml
docs/: ARCHITECTURE.md  IPC.md  PLAN.md
examples/: trayd.toml
examples/ipc-examples/: activate-request.json  activate.jsonl  error-not-found.json  error.jsonl  event-item-added.json  event-item-removed.json  get_items.jsonl  get_menu.jsonl  get_menu_sub.jsonl  get_pixmap.jsonl  list-request.json  list-response-empty.json  list-response.json  ok-response.json  ping-request.json  ping-response.json  ping.jsonl  subscribe-request.json  subscribe.jsonl  subscribed-response.json
examples/nushell/: activate-pick.nu  menu-interactive.nu  menu-rofi.nu  watch-events.nu
libtrayd/: Cargo.toml
libtrayd/src/: error.rs  lib.rs
libtrayd/src/dbus/: item.rs  menu.rs  mod.rs  tests.rs  watcher.rs
libtrayd/src/host/: mod.rs  tests.rs
libtrayd/src/model/: mod.rs  tests.rs
tray-tui/: Cargo.toml
tray-tui/src/app/: mod.rs  tests.rs
tray-tui/src/ipc/: mod.rs  tests.rs
trayctl/src/cli/: mod.rs  tests.rs
trayctl/src/ipc/: mod.rs  tests.rs
trayd/: Cargo.toml
trayd-client/: Cargo.toml
trayd-client/src/: error.rs  main.rs
trayd-client/src/app/: mod.rs
trayd-client/src/config/: mod.rs
trayd-client/src/ipc/: mod.rs  tests.rs
trayd/src/: error.rs  main.rs
trayd/src/cli/: mod.rs  tests.rs
trayd/src/config/: mod.rs  tests.rs
trayd/src/daemon/: mod.rs  tests.rs
trayd/src/ipc/: client.rs  codec.rs  mod.rs  protocol.rs  server.rs  tests.rs
