[package]
name = "libtrayd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "StatusNotifier tray host (D-Bus via zbus)."
keywords.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
