[package]
name = "libtrayd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "StatusNotifier tray host (D-Bus via zbus)."
keywords.workspace = true

[dependencies]
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { version = "0.1", default-features = false }
zbus       = { version = "5", default-features = false, features = ["tokio"] }
