[package]
name = "tray-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal UI for trayd (IPC socket client)."
keywords.workspace = true

[[bin]]
name = "tray-tui"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
ratatui = { version = "0.30", features = ["crossterm"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
